[gd_scene load_steps=64 format=2]

[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_00.png" type="Texture" id=1]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_01.png" type="Texture" id=2]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_02.png" type="Texture" id=3]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_03.png" type="Texture" id=4]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_04.png" type="Texture" id=5]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_05.png" type="Texture" id=6]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_06.png" type="Texture" id=7]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_07.png" type="Texture" id=8]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_08.png" type="Texture" id=9]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_09.png" type="Texture" id=10]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_10.png" type="Texture" id=11]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_11.png" type="Texture" id=12]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_12.png" type="Texture" id=13]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_13.png" type="Texture" id=14]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_14.png" type="Texture" id=15]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_15.png" type="Texture" id=16]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_16.png" type="Texture" id=17]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_17.png" type="Texture" id=18]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_18.png" type="Texture" id=19]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_19.png" type="Texture" id=20]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_20.png" type="Texture" id=21]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_21.png" type="Texture" id=22]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_22.png" type="Texture" id=23]
[ext_resource path="res://Assets/coreanimacion/Armature_animtion0_23.png" type="Texture" id=24]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_10.png" type="Texture" id=25]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_02.png" type="Texture" id=26]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_09.png" type="Texture" id=27]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_08.png" type="Texture" id=28]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_03.png" type="Texture" id=29]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_00.png" type="Texture" id=30]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_01.png" type="Texture" id=31]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_05.png" type="Texture" id=32]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_04.png" type="Texture" id=33]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_06.png" type="Texture" id=34]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_07.png" type="Texture" id=35]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_11.png" type="Texture" id=36]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_12.png" type="Texture" id=37]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_14.png" type="Texture" id=38]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_13.png" type="Texture" id=39]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_15.png" type="Texture" id=40]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_16.png" type="Texture" id=41]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_17.png" type="Texture" id=42]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_18.png" type="Texture" id=43]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_19.png" type="Texture" id=44]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_20.png" type="Texture" id=45]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_21.png" type="Texture" id=46]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_22.png" type="Texture" id=47]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_23.png" type="Texture" id=48]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_24.png" type="Texture" id=49]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_26.png" type="Texture" id=50]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_25.png" type="Texture" id=51]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_27.png" type="Texture" id=52]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_28.png" type="Texture" id=53]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_29.png" type="Texture" id=54]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_30.png" type="Texture" id=55]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_31.png" type="Texture" id=56]
[ext_resource path="res://Assets/tuberia/Armature_animtion0_32.png" type="Texture" id=57]
[ext_resource path="res://Script/ReactorNuclear.gd" type="Script" id=58]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 51 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 89.3878

[node name="Reactor" type="Node2D"]
script = ExtResource( 58 )

[node name="ReactorBase" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 2 )
frame = 5
playing = true

[node name="ReactorChimenea" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
position = Vector2( -11.7325, -56.8575 )
z_index = 4
frames = SubResource( 4 )
frame = 25
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -7.60001, 46.55 )
shape = SubResource( 5 )

[node name="Timer_1" type="Timer" parent="."]

[node name="Timer_2" type="Timer" parent="."]

[node name="Timer_3" type="Timer" parent="."]

[node name="Timer_4" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer_1" to="." method="_on_Timer_1_timeout"]
[connection signal="timeout" from="Timer_2" to="." method="_on_Timer_2_timeout"]
[connection signal="timeout" from="Timer_3" to="." method="_on_Timer_3_timeout"]
[connection signal="timeout" from="Timer_4" to="." method="_on_Timer_4_timeout"]
